--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <title>Help Me Decide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- PWA manifest + theme color -->
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#020617" />
+
+  <!-- Optional: touch icon for iOS (you can add this file later) -->
+  <link rel="apple-touch-icon" href="icons/icon-192.png" />
+
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body class="landing-active theme-light">
@@ -183,5 +191,14 @@
 
   <!-- Main app logic -->
   <script src="js/app.js"></script>
+
+  <!-- Service worker registration (silent auto-update) -->
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function () {
+        navigator.serviceWorker.register("./service-worker.js");
+      });
+    }
+  </script>
 </body>
 </html>
