--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <!-- PWA manifest + theme color -->
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#020617" />
-
-  <!-- Optional: touch icon for iOS (you can add this file later) -->
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
 
   <link rel="stylesheet" href="css/styles.css" />
@@ -146,6 +144,7 @@
           <!-- Option A card -->
           <div class="choice-card">
             <div class="label">Option A</div>
+            <img id="optionAImage" class="option-poster" alt="" style="display:none;" />
             <div class="option-name" id="optionAName"></div>
             <div class="button-row">
               <button class="primary" id="optionAButton" onclick="choose('A')">
@@ -160,6 +159,7 @@
           <!-- Option B card -->
           <div class="choice-card">
             <div class="label">Option B</div>
+            <img id="optionBImage" class="option-poster" alt="" style="display:none;" />
             <div class="option-name" id="optionBName"></div>
             <div class="button-row">
               <button class="primary" id="optionBButton" onclick="choose('B')">
@@ -188,6 +188,7 @@
   <script src="js/presets-baby-names.js"></script>
   <script src="js/presets-travel.js"></script>
   <script src="js/presets-ghibli.js"></script>
+  <script src="js/posters-ghibli.js"></script>
 
   <!-- Main app logic -->
   <script src="js/app.js"></script>
